--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <title>Document</title>
     
     </head>
-        <body class=" ">
+        <body class="scroll-smooth ">
         <!-- ======= Nav & Hero ======= -->
         <header class="bg-gray-100 shadow-lg">
             <!-- Nav Section -->
