--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.min.css">
         <script src="//unpkg.com/alpinejs" defer></script>
+        <link rel="icon" href="../assets/logo.png">
         <title>Document</title>
     
     </head>
