--- a/src/Register.html
+++ b/src/Register.html
@@ -77,8 +77,8 @@
             <!-- Desktop Nav -->
             <div class="items-center justify-between hidden w-full lg:flex md:w-auto md:order-1" id="navbar-cta">
               <ul
-                class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-12 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white ">
-                <li>
+                class="mr-20 flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-12 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white ">
+                <!-- <li>
                   <a href="index.html" class="block py-2 px-3 md:p-0    text-red-700 rounded" aria-current="page">Beranda</a>
                 </li>
                 <li>
@@ -87,7 +87,7 @@
                 </li>
                 <li>
                   <a href="lapor.html" class="block py-2 px-3 md:p-0 text-gray-900 hover:text-red-600 duration-300">Lapor</a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
