--- a/src/dataLaporan.html
+++ b/src/dataLaporan.html
@@ -84,14 +84,14 @@
                 <!-- Desktop Nav -->
                 <div class="items-center justify-between hidden w-full lg:flex md:w-auto md:order-1" id="navbar-cta">
                     <ul
-                        class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-12 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white ">
+                        class="mr-20 flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-12 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white ">
                         <li>
-                            <a href="indexLoggedin.html" class="block py-2 px-3 md:p-0    text-red-700 rounded"
+                            <a href="indexLoggedin.html" class="block py-2 px-3 md:p-0    text-gray-900 rounded"
                                 aria-current="page">Beranda</a>
                         </li>
                         <li>
                             <a href="dataLaporan.html"
-                                class="block py-2 px-3 md:p-0 text-gray-900 hover:text-red-600 duration-300">Data
+                                class="block py-2 px-3 md:p-0  text-red-700 hover:text-red-600 duration-300">Data
                                 Laporan</a>
                         </li>
                         <li>
@@ -104,42 +104,7 @@
         </nav>
 
 
-        
-
-
-        <!-- <section class="bg-white shadow-xl max-w-6xl mx-auto p-10">
-                            <h2 class="bg-accent-tertiary text-white p-3 font-bold text-2xl rounded-sm">Form Laporan</h2>
-                            <div class="flex flex-col lg:flex-row mt-5 ">
-                                <div
-                                    class="p-5 border border-red-600 w-full lg:w-1/3 space-x-5 flex text-accent-tertiary font-semibold tracking-widest">
-                                    <input type="radio" name="Infrastruktur" class=" checked:bg-accent">
-                                    <h5>Infrastruktur</h5>
-                                </div>
-                                <div
-                                    class="p-5 border border-red-600 w-full lg:w-1/3 space-x-5 flex text-accent-tertiary font-semibold tracking-widest">
-                                    <input type="radio" name="Infrastruktur" class="">
-                                    <h5>Keamanan</h5>
-                                </div>
-                                <div
-                                    class="p-5 border border-red-600 w-full lg:w-1/3 space-x-5 flex text-accent-tertiary font-semibold tracking-widest">
-                                    <input type="radio" name="Infrastruktur" class="">
-                                    <h5>Kebersihan</h5>
-                                </div>
-                            </div>
-                            <form action="" class="flex flex-col space-y-4 mt-5">
-                                <label class="text-lg">Nama Lengkap</label>
-                                <input type="text" placeholder="Ketik Nama Lengkap" class="border border-1 p-3 rounded-sm">
-                                <label class="text-lg">Nomor KTP</label>
-                                <input type="text" placeholder="Ketik Nomor KTP" class="border border-1 p-3 rounded-sm">
-                                <label class="text-lg">Daerah</label>
-                                <input type="text" placeholder="Ketik Daerah" class="border border-1 p-3 rounded-sm">
-                                <label class="text-lg">Divisi</label>
-                                <input type="text" placeholder="Ketik Divisi" class="border border-1 p-3 rounded-sm">
-                                <label class="text-lg">Isi Laporan</label>
-                                <textarea placeholder="Ketik Isi Laporan" class="border border-1 p-3 rounded-sm" cols="50"></textarea>
-                                <button class="btn bg-accent-tertiary text-white p-3 font-semibold rounded-sm">Laporkan</button>
-                            </form>
-                        </section> -->
+    
     </header>
 
     <main>
@@ -231,7 +196,7 @@
                             class="w-8 h-8 bg-gray-50 border-2 border-gray-200 rounded-full flex justify-center items-center mr-3 text-sm  lg:w-10 lg:h-10">3</span>
                         <div class="block">
                             <!-- <h4 class="text-lg  text-gray-900">Step 3</h4> -->
-                            <span class="text-sm text-gray-400">Konfirmasi</span>
+                            <span class="text-sm text-gray-400">Ulasan</span>
                         </div>
                     </a>
                 </li>
@@ -257,10 +222,10 @@
                         readonly id="nama-lengkap">
                 </div>
                 <div class="space-y-2">
-                    <p class="text-lg">Nomor KTP</p>
-                    <input type="text" value="Ketik Nomor KTP"
+                    <p class="text-lg">NIK</p>
+                    <input type="text" value=""
                         class="bg-gray-100 border-gray-300 w-full border border-1 p-3 border-black rounded-sm"
-                        readonly>
+                        readonly id="nik">
                 </div>
                 <div class="space-y-2">
                     <p class="text-lg">Lokasi</p>
@@ -268,7 +233,7 @@
                         class="bg-gray-100 border-gray-300 w-full border border-1 p-3 rounded-sm" readonly id="daerah">
                 </div>
                 <div class="space-y-2">
-                    <p class="text-lg">Kota</p>
+                    <p class="text-lg">Foto</p>
                     <input type="text" value="Bogor, Bogor utara"
                         class="bg-gray-100 border-gray-300 w-full border border-1 p-3 rounded-sm" readonly id="kota">
                 </div>
@@ -323,11 +288,13 @@
     }
 
     const namaLengkap= localStorage.getItem('nl');
+    const nik= localStorage.getItem('nik');
     const daerah = localStorage.getItem('daerah');
     const kota = localStorage.getItem('kota');
     const isiLaporan = localStorage.getItem('il');
 
     document.getElementById('nama-lengkap').value = namaLengkap;
+    document.getElementById('nik').value = nik;
     document.getElementById('daerah').value = daerah;
     document.getElementById('kota').value = kota;
     document.getElementById('isi-laporan').textContent = isiLaporan;
