--- a/src/Register.html
+++ b/src/Register.html
@@ -9,6 +9,7 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <script src="//unpkg.com/alpinejs" defer></script>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
         <title>Document</title>
@@ -52,9 +53,9 @@
                 <li>
                   <a href="index.html"
                     class="block py-2 px-3 md:p-0 text-red-700 bg-gray-200 rounded md:bg-transparent md:text-blue-700 md:dark:text-blue-500"
-                    aria-current="page">Beranda</a>
+                    aria-current="  ">Beranda</a>
                 </li>
-                <li>
+                <!-- <li>
                   <a href="dataLaporan.html"
                     class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700">Data
                     Laporan</a>
@@ -62,7 +63,7 @@
                 <li>
                   <a href="lapor.html"
                     class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700">Lapor</a>
-                </li>
+                </li> -->
                 <div class="space-x-5 flex items-center justify-left">
                   <button class="uppercase bg-red-700 text-white px-5 font-semibold h-12 hover:bg-red-800 transition-all"
                     onclick="toggleLogin()">Masuk</button>
