--- a/src/indexLoggedin.html
+++ b/src/indexLoggedin.html
@@ -212,8 +212,8 @@
 
         <!-- Mengapa Melapor Section -->
         <section data-aos="fade-down" data-aos-duration="600" class="max-w-7xl mx-auto mt-36">
-            <div class="absolute bg-red-500 h-1/2 top-1/4 w-14 -right-[120px] -z-20 rounded-l-full opacity-70 "></div>
-            <div class="absolute bg-red-500 h-1/2 top-1/4 w-14 -left-[120px] -z-20 rounded-r-full opacity-70 "></div>
+            <div class="hidden lg:block absolute bg-red-500 h-1/2 top-1/4 w-14 -right-[120px] -z-20 rounded-l-full opacity-70 "></div>
+            <div class="hidden lg:block absolute bg-red-500 h-1/2 top-1/4 w-14 -left-[120px] -z-20 rounded-r-full opacity-70 "></div>
             <div class="text-center z-50">
                 <h2 class="text-4xl font-bold mb-3">Mengapa melapor di LaporinAja?</h2>
                 <label class="font-light text-lg">Deliver great service experiences fast - without the complexity of
@@ -254,10 +254,10 @@
         <!-- End Section -->
 
         <!-- Apa yang bisa dilaporkan -->
-        <section class="mt-20 max-w-7xl mx-auto">
-            <h3 data-aos="fade-right" class=" text-4xl font-bold mb-3 text-center lg:text-left">Apa yang bisa Laporkan
+`        <section class="p-5 mt-20 max-w-7xl mx-auto">
+            <h3 data-aos="fade-right" class=" text-4xl font-bold mb-3 lg:text-left">Apa yang bisa Laporkan
             </h3>
-            <p data-aos="fade-right" class="text-center lg:text-left text-lg font-light">Dengan memahami dan melaporkan
+            <p data-aos="fade-right" class=" lg:text-left text-lg font-light">Dengan memahami dan melaporkan
                 situasi-situasi ini, kita berkontribusi pada <br> lingkungan yang lebih aman dan adil bagi
                 semua.</p>
             <div class="flex flex-col lg:flex-row mt-5 gap-5">
@@ -414,97 +414,6 @@
             </div>
         </section>
         <!-- Lapor end -->
-
-
-
-        <!-- Contact Section -->
-        <!-- <section data-aos="fade-down" class="my-24 max-w-7xl mx-auto p-6">
-            <div class="flex flex-col m:flex-row gap-4w-full">
-                <div class=" bg-gray-50 space-y-5 p-10 rounded-md shadow-[0_3px_8px_rgb(0,0,0,0.2)] w-2/3">
-
-                    <h1 class="text-3xl font-bold">Kontak Kami</h1>
-
-                    <p class="text-gray-700">Untuk informasi lebih lanjut, Silahkan hubungi Kami</p>
-
-                    <form class="space-y-5">
-                        <div class="flex space-x-10">
-                            <div class="flex flex-col w-1/2">
-                                <label for="contact-name" class="mb-2">Nama Lengkap <span
-                                        class="text-red-500 font-bold">*</span></label>
-                                <input type="text" name="contact-name" id="contact-name"
-                                    class="rounded-sm border-gray-300" placeholder="Nama Lengkap">
-                            </div>
-                            <div class="flex flex-col w-1/2">
-                                <label for="contact-phone" class="mb-2">No. Hp <span
-                                        class="text-red-500 font-bold">*</span></label>
-                                <input type="number" name="contact-phone" id="contact-phone"
-                                    class="rounded-sm border-gray-300" placeholder="Nomor">
-                            </div>
-                        </div>
-
-                        <div>
-                            <label for="contact-email" class="mb-2">Email <span
-                                    class="text-red-500 font-bold">*</span></label>
-                            <input type="email" name="contact-email" id="contact-email"
-                                class="w-full rounded-sm border-gray-300" placeholder="Email">
-                        </div>
-                        <div class="mb-5">
-                            <label for="contact-desc" class="mb-2">Deskripsi <span
-                                    class="text-red-500 font-bold">*</span></label>
-                            <input type="text" name="contact-desc" id="contact-desc"
-                                class="w-full rounded-sm border-gray-300" placeholder="Pesan">
-                        </div>
-                        <br>
-                        <input type="submit" value="Contact"
-                            class="w-full bg-red-500 rounded-md p-3 text-white font-bold">
-                    </form>
-                </div>
-
-                <div class="flex-col text-white space-y-3 w-1/3 lg:w-full">
-                    <div
-                        class="hover:translate-x-5 duration-200 w-full flex bg-red-600 p-7 items-center gap-4 rounded-md shadow-[0px_0px_0px_1px_rgba(0,0,0,0.06),0px_1px_1px_-0.5px_rgba(0,0,0,0.06),0px_3px_3px_-1.5px_rgba(0,0,0,0.06),_0px_6px_6px_-3px_rgba(0,0,0,0.06),0px_12px_12px_-6px_rgba(0,0,0,0.06),0px_24px_24px_-12px_rgba(0,0,0,0.06)]">
-                        <i class="ri-map-pin-line text-2xl"></i>
-
-                        <div>
-                            <h4 class="text-sm font-semibold">Alamat</h4>
-                            <p class="text-xs">Jl. Poras No.07, RT.01/RW.04, Loji, Kota Bogor, Jawa Barat 16117</p>
-                        </div>
-                    </div>
-
-                    <div
-                        class="hover:translate-x-5 duration-200 w-full flex bg-red-600 p-7 items-center gap-4 rounded-md shadow-[0px_0px_0px_1px_rgba(0,0,0,0.06),0px_1px_1px_-0.5px_rgba(0,0,0,0.06),0px_3px_3px_-1.5px_rgba(0,0,0,0.06),_0px_6px_6px_-3px_rgba(0,0,0,0.06),0px_12px_12px_-6px_rgba(0,0,0,0.06),0px_24px_24px_-12px_rgba(0,0,0,0.06)]">
-                        <i class="ri-phone-line text-2xl"></i>
-
-                        <div>
-                            <h4 class="text-sm font-semibold">Kontak</h4>
-                            <p class="text-xs">0888-1945-7777</p>
-                        </div>
-                    </div>
-
-                    <div
-                        class="hover:translate-x-5 duration-200 w-full flex bg-red-600 p-7 items-center gap-4 rounded-md shadow-[0px_0px_0px_1px_rgba(0,0,0,0.06),0px_1px_1px_-0.5px_rgba(0,0,0,0.06),0px_3px_3px_-1.5px_rgba(0,0,0,0.06),_0px_6px_6px_-3px_rgba(0,0,0,0.06),0px_12px_12px_-6px_rgba(0,0,0,0.06),0px_24px_24px_-12px_rgba(0,0,0,0.06)]">
-                        <i class="ri-mail-line text-2xl"></i>
-
-                        <div>
-                            <h4 class="text-sm font-semibold">Email</h4>
-                            <p class="text-xs">laporinaja@gmail.co.id</p>
-                        </div>
-                    </div>
-
-                    <div
-                        class="hover:translate-x-5 duration-200 w-full flex bg-red-600 p-7 items-center gap-4 rounded-md shadow-[0px_0px_0px_1px_rgba(0,0,0,0.06),0px_1px_1px_-0.5px_rgba(0,0,0,0.06),0px_3px_3px_-1.5px_rgba(0,0,0,0.06),_0px_6px_6px_-3px_rgba(0,0,0,0.06),0px_12px_12px_-6px_rgba(0,0,0,0.06),0px_24px_24px_-12px_rgba(0,0,0,0.06)]">
-                        <i class="ri-time-line text-2xl"></i>
-
-                        <div>
-                            <h4 class="text-sm font-semibold">Waktu Kami Berkerja</h4>
-                            <p class="text-xs">24/7</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </section> -->
-        <!-- Contact end -->
 
         <!-- Contact Section -->
         <section data-aos="fade-down" class="my-24 max-w-7xl mx-auto p-6">
