--- a/src/index.html
+++ b/src/index.html
@@ -100,9 +100,9 @@
         </header>
 
         <!-- ====== Login Popup ======= -->
-        <div class="form-login left-[10%] md:left-[30%] lg:left-[40%] transition-all duration-500 fixed z-50" id="form-login">
+        <div class="form-login left-[12%] md:left-[30%] lg:left-[40%] transition-all duration-500 fixed z-50" id="form-login">
             <div class="login-overlay"></div>
-            <div class="login-content bg-white h-auto w-[400px] px-8 py-10 rounded">
+            <div class="login-content bg-white h-auto w-[350px] lg:w-[400px] px-8 py-10 rounded">
 
                 <button class="close-btn text-2xl hover:cursor-pointer" onclick="toggleLogin()">&times;</button>
     
